--- a/app.json
+++ b/app.json
@@ -29,8 +29,6 @@
     "web": {
       "favicon": "./assets/images/logo-sm.png"
     },
-    "runtimeVersion": {
-      "policy": "sdkVersion"
-    }
+    "scheme": "myapp"
   }
 }
