--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "test": "jest --verbose --passWithNoTests",
     "test:watch": "jest --verbose --passWithNoTests --watch",
-    "prepare": "husky"
+    "prepare": "husky",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -51,6 +53,7 @@
     "expo-web-browser": "~14.0.2",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.3",
+    "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
@@ -66,6 +69,7 @@
     "react-native-webview": "13.12.5",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
+    "tailwindcss": "^3.4.17",
     "yup": "^1.6.1"
   },
   "devDependencies": {
