--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "expo": "~52.0.26",
     "expo-asset": "~11.0.1",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.3",
+    "expo-constants": "^17.0.5",
     "expo-font": "~13.0.2",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
