--- a/package.json
+++ b/package.json
@@ -4,25 +4,11 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "EXPO_NO_DOTENV=1 dotenvx run -f .env.dev -- expo start -c",
-    "dev:ios": "EXPO_NO_DOTENV=1 dotenvx run -f .env.dev -- expo start --ios -c",
-    "dev:android": "EXPO_NO_DOTENV=1 dotenvx run -f .env.dev -- expo start --android -c",
-    "dev:web": "EXPO_NO_DOTENV=1 dotenvx run -f .env.dev -- expo start --web -c",
-    "dev:doctor": "EXPO_NO_DOTENV=1 dotenvx run -f .env.dev -- npx expo-doctor",
-    "dev:secret:push": "dotenvx run -f .env.dev -- eas secret:push --scope project --env-file .env.dev --force",
-    "dev:secret:list": "dotenvx run -f .env.dev -- eas env:list",
-    "dev:build:mobile": "npm run dev:secret:push && EXPO_NO_DOTENV=1 dotenv -e .env.dev -- npx eas build --profile development",
-    "dev:build:web": "dotenvx run -f .env.dev -- npx expo export --platform web",
-    "dev:deploy:web": "npm run dev:build:web && dotenvx run -f .env.dev -- eas deploy --environment development",
-    "dev:config:public": "dotenvx run -f .env.dev -- npx expo config --type public",
-    "lint": "expo lint",
-    "lint:staged": "lint-staged",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "test": "jest --verbose --passWithNoTests",
-    "test:watch": "jest --verbose --passWithNoTests --watch",
-    "prepare": "husky",
-    "android": "expo run:android",
-    "ios": "expo run:ios"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -78,6 +64,7 @@
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
     "@types/redux-logger": "^3.0.13",
     "eslint": "^8.57.0",
