--- a/app.json
+++ b/app.json
@@ -11,15 +11,16 @@
       "web"
     ],
     "orientation": "portrait",
-    "icon": "./assets/images/logo-lg.png",
+    "icon": "./assets/images/logo.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "backgroundColor": "#ffffff",
+      "backgroundColor": "#f5f5f5", 
       "dark": {
         "backgroundColor": "#101212"
       },
-      "image": "./assets/images/logo-lg.png",
-      "resizeMode": "contain"
+      "image": "./assets/images/logo-lg.png", 
+      "resizeMode": "cover", 
+      "fade": true  
     },
     "ios": {
       "supportsTablet": true,
@@ -27,12 +28,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/logo-sm.png",
+        "foregroundImage": "./assets/images/logo-lg.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/images/logo-sm.png"
+      "favicon": "./assets/images/logo-lg.png"
     },
     "scheme": "myapp"
   }
