add to cart functionality

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "react-native-boilerplate",
-    "slug": "react-native-boilerplate",
+    "name": "Shopperia",
+    "slug": "Shopperia",
     "version": "3.0.0",
     "owner": "wataru",
     "newArchEnabled": true,
