--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "expo-web-browser": "~14.0.2",
     "jest": "~29.7.0",
     "jest-expo": "~52.0.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
     "react-dom": "18.3.1",
@@ -63,6 +65,7 @@
     "@dotenvx/dotenvx": "^1.33.0",
     "@testing-library/react-native": "^13.0.1",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.15",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.3.0",
