--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@gorhom/bottom-sheet": "^5",
     "@hookform/resolvers": "^3.10.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
@@ -40,6 +42,7 @@
     "jest": "~29.7.0",
     "jest-expo": "~52.0.3",
     "lodash": "^4.17.21",
+    "lucide-react-native": "^0.474.0",
     "moment": "^2.30.1",
     "nativewind": "^4.1.23",
     "react": "^18.3.1",
