--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2",
     "react-native": "^0.76.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-reanimated": "~3.16.1",
